Pulled back padding-left on bottom text to prevent wrapping in safari

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ footer {
 	position: absolute;
 	
 	bottom: 4px;
-	padding-left: 20px;
+	padding-left: 16px;
 	margin: 0;
 	width: 310px;
 	 
